# aipd

./: .gitignore  README.md
aipd_launch/: CMakeLists.txt  package.xml
aipd_launch/launch/: aipd.launch
aipd_msgs/: CMakeLists.txt  package.xml
aipd_msgs/msg/: DetectedObject.msg  Ticket.msg
aipd_panel/: CMakeLists.txt  package.xml  rviz_plugin.xml
aipd_panel/include/aipd_panel/: aipd_panel.hpp
aipd_panel/resource/: actual.ui  aipd_panel.ui  resource.qrc
aipd_panel/src/: aipd_panel.cpp
aipd_visualizer/: CMakeLists.txt  package.xml
aipd_visualizer/aipd_visualizer/: camera_bbox_publisher.py  lidar_bbox_publisher.py
aipd_visualizer/rviz/: aipd_viz.rviz
speed_trap/: CMakeLists.txt  package.xml
speed_trap/rviz/: nuscenes_viz.rviz
speed_trap/speed_trap/: ego_velocity_estimator.py  ticket_issuer.py
tools/: conversion_tool.py
